[package]
name = "anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
quartz_nbt = "0.2.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "converter"
path = "./src/bin/converter/main.rs"
